--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,3 +1,27 @@
-.someClass {
-
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    gap: 30px;
+    color: #444444;
+    margin: 10px;
+}
+button{
+    border: 0;
+    height: 25px;
+    background: cadetblue;
+    margin: 0 5px 0 5px;
+    border-radius: 6px;
+}
+.delete button {
+    width: 80px;
+}
+.controls button {
+    width: 60px;
+}
+.priority,
+.name {
+    text-align: center;
+}
+.name {
+    color: black;
 }
