--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,7 +1,41 @@
 .default {
+    color: #fff;
+    font-size: 16px;
+    background: #1876f2;
+    cursor: pointer;
+    border-style: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    border-radius: 6px;
+    width: 100px;
+    height: 35px;
+    padding: 5px;
+}
 
+.default:hover {
+    background: #3e8df4;
+}
+
+.default:active {
+    box-shadow: 0 0 0 1px #1876f2;
 }
 
 .red {
     background: red;
+}
+
+.red:hover {
+    background: rgba(255, 0, 0, 0.71);
+}
+
+.red:active {
+    box-shadow: 0 0 0 1px red;
+}
+
+.default:disabled,
+.red:disabled {
+    background: #919191;
+    cursor: default;
 }
