--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,7 +1,46 @@
-.checkbox {
-
+label {
+    margin: 10px 0 0 20px;
 }
-
+.checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
 .spanClassName {
-
+    position: relative;
+    padding: 0 0 0 60px;
+    cursor: pointer;
+}
+.spanClassName:before {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: 0;
+    width: 50px;
+    height: 26px;
+    border-radius: 13px;
+    background: #CDD1DA;
+    box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
+    transition: .2s;
+}
+.spanClassName:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: 2px;
+    width: 22px;
+    height: 22px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0 2px 5px rgba(0,0,0,.3);
+    transition: .2s;
+}
+.checkbox:checked + .spanClassName:before {
+    background: #1876f2;
+}
+.checkbox:checked + .spanClassName:after {
+    left: 26px;
+}
+.checkbox:focus + .spanClassName:before {
+    box-shadow: inset 0 2px 3px rgb(62, 143, 248), 0 0 0 3px rgb(255, 255, 255);
 }
