--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,8 +1,8 @@
-/*.wrapper {*/
-/*    display: flex;*/
-/*    min-width: 250px;*/
-/*    align-items: center;*/
-/*}*/
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .defaultInput {
     background: #efefef;
     padding: 10px;
@@ -10,7 +10,7 @@
     color: #919191;
     border-radius: 6px;
     border: none;
-    margin: 10px;
+    margin-top: 10px;
 }
 
 .superInput:focus {
@@ -29,5 +29,8 @@
 
 .error {
     color: red;
+}
 
+.spanClass {
+    height: 15px;
 }
