--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,3 +1,15 @@
-.App {
+.app {
+    margin: 0 25% 0 25%;
+    width: 50%;
+}
 
+.header {
+    background: #1876f2;
+    color: white;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
 }
