--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,6 +1,6 @@
 .app {
-    margin: 0 25% 0 25%;
-    width: 50%;
+    margin: 0 15% 0 15%;
+    width: 70%;
 }
 
 .header {
@@ -11,5 +11,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 22px;
+}
+.headerTitle {
+    font-size: 24px;
+    line-height: 40px;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-style: italic;
 }
