--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,7 +1,8 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    max-width: 200px;
+    height: 60px;
 }
 .defaultInput {
     background: #efefef;
