set dark theme for all app

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
 
 .spanTitle {
     margin: 1em 0 0.5em 0;
-    color: #343434;
+    /*color: #343434;*/
     font-size: 18px;
     line-height: 40px;
     font-weight: normal;
