--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,17 +1,22 @@
+.container {
+    width: 100%;
+    min-height: 100vh;
+    padding: 15px 0;
+}
+
 .app {
     margin: 0 15% 0 15%;
     width: 70%;
 }
 
 .header {
-    background: #1876f2;
-    color: white;
     width: 100%;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .headerTitle {
     font-size: 24px;
     line-height: 40px;
