--- a/src/p2-homeworks/h5/Header.module.css
+++ b/src/p2-homeworks/h5/Header.module.css
@@ -6,7 +6,6 @@
     margin: 0;
     box-sizing: border-box;
     width: 200px;
-    background-color: #eee;
     height: 100%;
     top: 0;
     left: -200px;
@@ -19,8 +18,6 @@
     display: none;
 }
 .btn_menu {
-    color: #fff;
-    background-color: #1876f2;
     padding: 5px;
     position: fixed;
     top: 0;
@@ -87,7 +84,7 @@ a {
     content: '';
     display: block;
     position: absolute;
-    background-color: #fff;
+    /*background-color: #fff;*/
     top: 30px;
     width: 0;
     height: 2px;
