--- a/src/index.css
+++ b/src/index.css
@@ -51,5 +51,13 @@ td {
 }
 .HW13 {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.HW13-onCenter {
+    display: flex;
     align-items: center;
+}
+.HW11-margin {
+    width: 25px;
 }
